Matrix.cppresult.txt
cur.cpp: In member function 'virtual void MatrixTest_Reverse_Test::TestBody()':
cur.cpp:34:19: error: 'class Matrix' has no member named 'reverse'
     Matrix c = m->reverse();
                   ^
cur.cpp:47:12: error: 'class Matrix' has no member named 'reverse'
     c = m->reverse();
            ^
In file included from /usr/pkg/include/gtest/gtest.h:57:0,
                 from cur.cpp:14:
cur.cpp: In member function 'virtual void MatrixTest_Determinant_Test::TestBody()':
cur.cpp:126:30: error: 'class Matrix' has no member named 'determinant'
     EXPECT_TRUE(abs((int)(m->determinant())) < 0.001);
                              ^
/usr/pkg/include/gtest/internal/gtest-internal.h:1179:34: note: in definition of macro 'GTEST_TEST_BOOLEAN_'
       ::testing::AssertionResult(expression)) \
                                  ^
cur.cpp:126:5: note: in expansion of macro 'EXPECT_TRUE'
     EXPECT_TRUE(abs((int)(m->determinant())) < 0.001);
     ^
cur.cpp:139:30: error: 'class Matrix' has no member named 'determinant'
     EXPECT_TRUE(abs((int)(m->determinant() - 1)) < 0.001);
                              ^
/usr/pkg/include/gtest/internal/gtest-internal.h:1179:34: note: in definition of macro 'GTEST_TEST_BOOLEAN_'
       ::testing::AssertionResult(expression)) \
                                  ^
cur.cpp:139:5: note: in expansion of macro 'EXPECT_TRUE'
     EXPECT_TRUE(abs((int)(m->determinant() - 1)) < 0.001);
     ^
./check.sh: line 24: ./a.out: No such file or directory
